@@ -1,13 +1,11 @@
 package codesquad.fineants.domain.stock.domain.entity;
 
 import java.time.LocalDate;
-import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import codesquad.fineants.domain.BaseEntity;
 import codesquad.fineants.domain.common.money.Expression;
@@ -18,12 +16,14 @@ import codesquad.fineants.domain.kis.repository.ClosingPriceRepository;
 import codesquad.fineants.domain.kis.repository.CurrentPriceRepository;
 import codesquad.fineants.domain.purchasehistory.domain.entity.PurchaseHistory;
 import codesquad.fineants.domain.stock.converter.MarketConverter;
+import codesquad.fineants.infra.s3.service.AmazonS3StockService;
 import jakarta.persistence.Convert;
 import jakarta.persistence.Entity;
 import jakarta.persistence.FetchType;
 import jakarta.persistence.Id;
 import jakarta.persistence.OneToMany;
 import lombok.AccessLevel;
+import lombok.EqualsAndHashCode;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.ToString;
@@ -31,6 +31,7 @@ import lombok.ToString;
 @Getter
 @ToString(exclude = "stockDividends")
 @NoArgsConstructor(access = AccessLevel.PROTECTED)
+@EqualsAndHashCode(of = "stockCode", callSuper = false)
 @Entity
 public class Stock extends BaseEntity {
 
@@ -42,25 +43,35 @@ public class Stock extends BaseEntity {
 	private String sector;
 	@Convert(converter = MarketConverter.class)
 	private Market market;
+	private boolean isDeleted;
 
 	@OneToMany(mappedBy = "stock", fetch = FetchType.LAZY)
 	private final List<StockDividend> stockDividends = new ArrayList<>();
 
-	private Stock(LocalDateTime createAt, LocalDateTime modifiedAt, String tickerSymbol,
-		String companyName, String companyNameEng, String stockCode, String sector, Market market) {
-		super(createAt, modifiedAt);
+	private Stock(String tickerSymbol, String companyName, String companyNameEng, String stockCode, String sector,
+		Market market) {
 		this.tickerSymbol = tickerSymbol;
 		this.companyName = companyName;
 		this.companyNameEng = companyNameEng;
 		this.stockCode = stockCode;
 		this.sector = sector;
 		this.market = market;
+		this.isDeleted = false;
 	}
 
 	public static Stock of(String tickerSymbol, String companyName, String companyNameEng, String stockCode,
 		String sector, Market market) {
-		return new Stock(LocalDateTime.now(), null, tickerSymbol, companyName, companyNameEng, stockCode, sector,
-			market);
+		return new Stock(tickerSymbol, companyName, companyNameEng, stockCode, sector, market);
+	}
+
+	public static Stock parse(String[] data) {
+		String stockCode = data[0];
+		String tickerSymbol = data[1];
+		String companyName = data[2];
+		String companyNameEng = data[3];
+		Market market = Market.ofMarket(data[4]);
+		String sector = data[5];
+		return new Stock(tickerSymbol, companyName, companyNameEng, stockCode, sector, market);
 	}
 
 	public void addStockDividend(StockDividend stockDividend) {
@@ -72,17 +83,15 @@ public class Stock extends BaseEntity {
 	public List<StockDividend> getCurrentMonthDividends() {
 		LocalDate today = LocalDate.now();
 		return stockDividends.stream()
-			.filter(dividend -> dividend.getPaymentDate() != null)
-			.filter(dividend -> dividend.getPaymentDate().getYear() == today.getYear() &&
-				dividend.getPaymentDate().getMonth() == today.getMonth())
-			.collect(Collectors.toList());
+			.filter(dividend -> dividend.equalPaymentDate(today))
+			.toList();
 	}
 
 	public List<StockDividend> getCurrentYearDividends() {
 		LocalDate today = LocalDate.now();
 		return stockDividends.stream()
 			.filter(dividend -> dividend.isCurrentYearPaymentDate(today))
-			.collect(Collectors.toList());
+			.toList();
 	}
 
 	public Map<Integer, Expression> createMonthlyDividends(List<PurchaseHistory> purchaseHistories,
@@ -119,7 +128,7 @@ public class Stock extends BaseEntity {
 		// 0. 현재년도에 해당하는 배당금 정보를 필터링하여 별도 저장합니다.
 		List<StockDividend> currentYearStockDividends = stockDividends.stream()
 			.filter(stockDividend -> stockDividend.isCurrentYearRecordDate(currentLocalDate))
-			.collect(Collectors.toList());
+			.toList();
 
 		// 1. 배당금 데이터 중에서 현금지급일자가 작년도에 해당하는 배당금 정보를 필터링합니다.
 		// 2. 1단계에서 필터링한 배당금 데이터들중 0단계에서 별도 저장한 현재년도의 분기 배당금과 중복되는 배당금 정보를 필터링합니다.
@@ -142,7 +151,7 @@ public class Stock extends BaseEntity {
 		return stockDividends.stream()
 			.filter(dividend -> dividend.isCurrentYearPaymentDate(LocalDate.now()))
 			.map(StockDividend::getDividend)
-			.map(money -> (Expression)money)
+			.map(Expression.class::cast)
 			.reduce(Money.zero(), Expression::plus);
 	}
 
@@ -150,7 +159,7 @@ public class Stock extends BaseEntity {
 		Expression dividends = stockDividends.stream()
 			.filter(dividend -> dividend.isSatisfiedPaymentDateEqualYearBy(LocalDate.now()))
 			.map(StockDividend::getDividend)
-			.map(money -> (Expression)money)
+			.map(Expression.class::cast)
 			.reduce(Money.zero(), Expression::plus);
 		return dividends.divide(getCurrentPrice(manager));
 	}
@@ -184,10 +193,10 @@ public class Stock extends BaseEntity {
 		return stockDividends.stream()
 			.filter(dividend -> dividend.isCurrentYearPaymentDate(LocalDate.now()))
 			.map(dividend -> dividend.getPaymentDate().getMonthValue())
-			.collect(Collectors.toList());
+			.toList();
 	}
-
 	// ticker 및 recordDate 기준으로 KisDividend가 매치되어 있는지 확인
+
 	public boolean matchByTickerSymbolAndRecordDate(String tickerSymbol, LocalDate recordDate) {
 		if (!this.tickerSymbol.equals(tickerSymbol)) {
 			return false;
@@ -208,6 +217,16 @@ public class Stock extends BaseEntity {
 	public List<StockDividend> getStockDividendNotInRange(LocalDate from, LocalDate to) {
 		return stockDividends.stream()
 			.filter(stockDividend -> !stockDividend.hasInRange(from, to))
-			.collect(Collectors.toList());
+			.toList();
+	}
+
+	public String toCsvLineString() {
+		return String.join(AmazonS3StockService.CSV_SEPARATOR,
+			stockCode,
+			tickerSymbol,
+			companyName,
+			companyNameEng,
+			market.name(),
+			sector);
 	}
 }
