@@ -1,7 +1,6 @@
 package codesquad.fineants.global.security.ajax.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.security.authentication.BadCredentialsException;
 import org.springframework.security.core.GrantedAuthority;
@@ -33,7 +32,7 @@ public class MemberUserDetailService implements UserDetailsService {
 		log.debug("findMember : {}", member);
 		List<GrantedAuthority> roles = member.getRoles().stream()
 			.map(MemberRole::toSimpleGrantedAuthority)
-			.collect(Collectors.toList());
+			.toList();
 		log.debug("fineMember's roles : {}", roles);
 		return new MemberContext(member, roles);
 	}
